警告优化